# DecklinkSDK

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  linuxSources.cmake  macosxSources.cmake
Examples/: CMakeLists.txt
Linux/include/: DeckLinkAPI.h  DeckLinkAPIConfiguration.h  DeckLinkAPITypes.h  _DeckLinkAPITypes.h
Mac/Samples/: CMakeLists.txt
cmake/: Config.cmake.in
